added table head

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
      <!-- form for adding new school collection -->
     <h2>Add New Collection</h2>
     <table>
-        <tr>
-            <th>Name</th>
-            <th>Address</th>
-            <th>Mobile</th>
-            <th>Email</th>
-        </tr>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Address</th>
+                <th>Mobile</th>
+                <th>Email</th>
+            </tr>
+        </thead>
         <tr>
             <td>Joseph Karanja</td>
             <td>00200</td>
